fix display on mobile

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -29,8 +29,8 @@
   background-color: rgba(255,255,255,.2);
 }
 /* a bit wider to have support full console width */
-.md-grid {
-  max-width: calc(100% - 11.8rem * 2);
+.md-content {
+  max-width: 100%;
 }
 /* cookie consent bar */
 .cookieConsent {
